[package]
name = "temporal-sdk-python-bridge"
version = "0.1.0"
authors = ["Linas Valiukas <pypt@pypt.lt>"]
keywords = ["temporal", "temporal.io", "workflow", "cadence"]
readme = "README.md"
description = "Unofficial SDK client for temporal.io"
categories = ["development-tools"]
edition = "2018"
exclude = ["sdk-core"]

[lib]
name = "temporal_sdk_python_bridge"
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3", features = ["executor"] }
prost = "0.8"
prost-types = "0.8"
tokio = "1.4.0"
once_cell = "1.7.2"
pyo3 = { version = "0.14.1", features = ["extension-module"] }
pyo3-asyncio = { version = "0.13.4", features = ["attributes", "async-std-runtime"] }
# TODO: revert back to version *, can't now because of this error: prerelease package needs to be specified explicitly
temporal-sdk-core = { version = "0.1.0-alpha.1", path = "./sdk-core" }
