[package]
name = "pytemporalio"
version = "0.1.0"
authors = ["Linas Valiukas <pypt@pypt.lt>"]
keywords = ["temporal", "temporal.io", "workflow", "cadence"]
readme = "README.md"
description = "Unofficial SDK client for temporal.io"
categories = ["development-tools"]
edition = "2018"

[lib]
name = "pytemporalio"
crate-type = ["cdylib"]

[dependencies.temporal-sdk-core]
git = "https://github.com/temporalio/sdk-core.git"
rev = "001504aad24256fb7b880251052daf3c7715ff14"

[dependencies.chrono]
version = "0.4.19"

[dependencies.prost]
version = "0.8.0"

[dependencies.prost-types]
version = "0.8.0"

[dependencies.tokio]
version = "1.9.0"

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]

[dependencies.pyo3-chrono]
version = "0.2.1"

[dependencies.pyo3-asyncio]
version = "0.14.0"
features = ["attributes", "tokio-runtime"]
